# sv03

./: .dockerignore  .env.sample  .gitignore  Dockerfile  clubapp_uvicorn.py  deploy.Dockerfile  deployment.yml  docker-compose.yml  entrypoint.sh  load_deps.sh  logging.yaml  manage.py  pyproject.toml  readme.md  renovate.json  requirements-dev.txt  requirements.txt  sv03.yml  test_data.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/setup_python/: action.yaml
.github/workflows/: main.yml
clubapp/club/: admin.py  apps.py  importer.py  models.py  test_approve_view.py  test_notify_command.py  urls.py  views.py
clubapp/club/fixtures/: Membership.json  ReservableThing.json  ReservationGroup.json  Ressort.json
clubapp/club/jobs/daily/: __init__.py
clubapp/club/management/commands/: dumpfixtures.py  format.py  lint.py  loadfixtures.py  notify.py  precommit.py  run.py  synckc.py  typecheck.py
clubapp/club/migrations/: 0001_initial.py  0002_alter_ressort_head.py  0002_alter_user_membership_type.py  0002_membership_membership_id_for_import_and_more.py  0002_remove_user_bic_remove_user_iban_and_more.py  0003_alter_user_membership_type.py  0003_remove_user_membership_type_membershipyear.py  0003_ressort_email.py  0004_membershipyear_is_boat_owner_and_more.py  0004_remove_ressort_bank_account_user_birthday_and_more.py  0005_alter_membershipyear_options_and_more.py  0006_user_openid_sub.py  0007_alter_membershipyear_year.py  0008_user_member_id.py  0009_membership_internal_name_ressort_internal_name.py  0010_alter_membership_internal_name_and_more.py
clubapp/club/templates/: member_select.html  sewobe_importer.html
clubapp/clubapp/: asgi.py  context_processors.py  decorators.py  oidc.py  settings.py  urls.py  utils.py  views.py  wsgi.py
clubapp/clubapp/tests/: test_meta.py  test_utils.py
clubapp/clubwork/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
clubapp/clubwork/migrations/: 0001_initial.py  0002_alter_clubwork_date_time_alter_clubwork_description_and_more.py  0002_alter_clubworkparticipation_approved_by.py  0002_clubwork_async_date.py  0003_alter_clubworkparticipation_clubwork.py  0003_clubworkparticipation_did_send_approve_hint_and_more.py  0004_alter_clubworkparticipation_clubwork.py  0005_clubworkparticipation_is_approved.py
clubapp/clubwork/templates/: abmelden_delete_form.html  approve_clubwork.html  clubwork.html  clubwork_all.html  clubwork_card.html  clubwork_detail.html  clubwork_future.html  clubwork_history.html  clubwork_user_history.html  download.html  email_specific_user.html  select_member.html  select_specific_user.html  user_clubwork.html
clubapp/refundflow/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
clubapp/refundflow/migrations/: 0001_initial.py  0002_alter_tracking_annotation.py
clubapp/refundflow/templates/: add_refund.html  add_tracking.html  approve_payment.html  history.html  invoice.html  manage_payment.html  tracking_overview.html  transaction_overview.html
clubapp/reservationflow/: admin.py  apps.py  calendar.py  forms.py  models.py  tests.py  urls.py  views.py
clubapp/reservationflow/migrations/: 0001_initial.py  0002_alter_reservabelthing_options_and_more.py  0002_alter_reservablething_description_and_more.py  0002_alter_reservablething_options_and_more.py  0003_reservation_note.py  0003_reservationgroup_users_and_more.py  0004_alter_reservation_note.py  0004_alter_reservationgroup_users.py  0005_alter_reservationgroup_users.py  0006_reservationgroup_internal_name_and_more.py
clubapp/reservationflow/templates/: calendar.html  newcal.html  reservation_detail.html  reservation_list.html
clubapp/static/: clubapp.js
clubapp/static/customcss/: auth.css  custom.css
clubapp/templates/: base.html  create_form.html  delete_form.html  index.html  profile_overview.html  settings.html
clubapp/templates/registration/: login.html  password_change_form.html  password_reset_confirm.html  password_reset_form.html
docs/: keycloak.md
nginx/: backend.conf  nginx_domain_file  nginx_domain_file_location  sso_domain_file  uvicornsock.conf
