[tool.poetry]
name = "clubapp"
version = "0.0.1"
description = ""
authors = []
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
# xhtml2pdf = "0.2.11"
crispy-bootstrap5 = "^2024.2"
uvicorn = {version = "0.29"}
django-stubs-ext = "^5.1.0"
mozilla-django-oidc = "4.0.1"
django-filter = "24.3"
openpyxl = "3.1.5"
django-extensions = "3.2.3"
python-keycloak = "^4.5.0"
python-dotenv = "^1.0.1"
sentry-sdk = { version = "^2.15.0", extras = ["django"] }
schedule = "^1.2.2"
pyyaml = "^6.0.2"
django-bootstrap-datepicker-plus = "^5.0.5"
django-autocomplete-light = "^3.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.8"
django-stubs = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "**/migrations/*",
    "**/settings/__init__.py",
    "**/commands/*.py",
    "**/tests.py"
]

[tool.ruff.lint]
select = [ "ALL",]
ignore = [ "E501", "ANN101", "ANN102", "D100", "D102", "D104", "D106", "D203", "D212", "S104", "COM812", "ISC001", "D101", "RUF012", "D", "ANN401", "RUF005", "FBT", "ERA001" ]

[tool.ruff.lint.per-file-ignores]
"cli.py" = [ "T201" ]

[tool.mypy]
packages = "clubapp"
strict = true
follow_imports = 'normal'
implicit_reexport = true
plugins = ["mypy_django_plugin.main"]

exclude = [
    "test\\.py$",
    "migrations/*",
    "tests.py"
]

[[tool.mypy.overrides]]
module = ["xhtml2pdf", "uvicorn", "django_filters.*", "openpyxl.*", "mozilla_django_oidc.*", "keycloak.*"]
ignore_missing_imports = true
disallow_any_generics = false

[tool.django-stubs]
django_settings_module = "clubapp.clubapp.settings"
