[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    "**/migrations/*",
    "**/settings/__init__.py",
    "**/commands/*.py",
    "**/tests.py"
]

[tool.ruff.lint]
select = [ "ALL",]
ignore = [ "E501", "ANN101", "ANN102", "D100", "D102", "D104", "D106", "D203", "D212", "S104", "COM812", "ISC001", "D101", "RUF012", "D", "ANN401", "RUF005", "FBT", "ERA001", "PT009", "PT027" ]

[tool.ruff.lint.per-file-ignores]
"cli.py" = [ "T201" ]

[tool.mypy]
packages = "clubapp"
strict = true
follow_imports = 'normal'
implicit_reexport = true
plugins = ["mypy_django_plugin.main"]

exclude = [
    "test\\.py$",
    "migrations/*",
    "tests.py"
]

[[tool.mypy.overrides]]
module = ["xhtml2pdf", "uvicorn", "django_filters.*", "openpyxl.*", "mozilla_django_oidc.*", "keycloak.*", "dal.*"]
ignore_missing_imports = true
disallow_any_generics = false

[tool.django-stubs]
django_settings_module = "clubapp.clubapp.settings"

[project]
authors = []
requires-python = "<4.0,>=3.14.2"
dependencies = [
    "django<6.0,>=5.1",
    "crispy-bootstrap5<2025.0,>=2024.2",
    "uvicorn==0.29",
    "django-stubs-ext<6.0.0,>=5.1.2",
    "mozilla-django-oidc==4.0.1",
    "django-filter==24.3",
    "openpyxl==3.1.5",
    "django-extensions==3.2.3",
    "python-keycloak<6.0.0,>=5.1.1",
    "python-dotenv<2.0.0,>=1.0.1",
    "sentry-sdk[django]<3.0.0,>=2.20.0",
    "schedule<2.0.0,>=1.2.2",
    "pyyaml<7.0.0,>=6.0.2",
    "django-bootstrap-datepicker-plus<6.0.0,>=5.0.5",
    "django-autocomplete-light<4.0.0,>=3.11.0",
    "whitenoise[brotli]>=6.9.0",
]
name = "clubapp"
version = "0.0.1"
description = ""
readme = "readme.md"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.14.1",
    "ruff<1.0.0,>=0.9.3",
    "django-stubs",
]
